docs/0.6/_sources/api/gammapy.spectrum.PHACountsSpectrum.rst.txt


PHACountsSpectrum
==================================

.. currentmodule:: gammapy.spectrum

.. autoclass:: PHACountsSpectrum
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~PHACountsSpectrum.arffile
      ~PHACountsSpectrum.bins_in_safe_range
      ~PHACountsSpectrum.bkgfile
      ~PHACountsSpectrum.counts_in_safe_range
      ~PHACountsSpectrum.hi_threshold
      ~PHACountsSpectrum.livetime
      ~PHACountsSpectrum.lo_threshold
      ~PHACountsSpectrum.obs_id
      ~PHACountsSpectrum.offset
      ~PHACountsSpectrum.phafile
      ~PHACountsSpectrum.rmffile

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PHACountsSpectrum.from_hdulist
      ~PHACountsSpectrum.read
      ~PHACountsSpectrum.rebin
      ~PHACountsSpectrum.to_sherpa
      ~PHACountsSpectrum.to_table

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: arffile
   .. autoattribute:: bins_in_safe_range
   .. autoattribute:: bkgfile
   .. autoattribute:: counts_in_safe_range
   .. autoattribute:: hi_threshold
   .. autoattribute:: livetime
   .. autoattribute:: lo_threshold
   .. autoattribute:: obs_id
   .. autoattribute:: offset
   .. autoattribute:: phafile
   .. autoattribute:: rmffile

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: from_hdulist
   .. automethod:: read
   .. automethod:: rebin
   .. automethod:: to_sherpa
   .. automethod:: to_table

   
   