docs/0.7/_sources/api/gammapy.spectrum.PHACountsSpectrum.rst.txt
PHACountsSpectrum
=================

.. currentmodule:: gammapy.spectrum

.. autoclass:: PHACountsSpectrum
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PHACountsSpectrum.arffile
      ~PHACountsSpectrum.bins_in_safe_range
      ~PHACountsSpectrum.bkgfile
      ~PHACountsSpectrum.counts_in_safe_range
      ~PHACountsSpectrum.default_interp_kwargs
      ~PHACountsSpectrum.energy
      ~PHACountsSpectrum.hi_threshold
      ~PHACountsSpectrum.livetime
      ~PHACountsSpectrum.lo_threshold
      ~PHACountsSpectrum.obs_id
      ~PHACountsSpectrum.offset
      ~PHACountsSpectrum.phafile
      ~PHACountsSpectrum.rmffile
      ~PHACountsSpectrum.total_counts

   .. rubric:: Methods Summary

   .. autosummary::

      ~PHACountsSpectrum.copy
      ~PHACountsSpectrum.fill
      ~PHACountsSpectrum.from_hdulist
      ~PHACountsSpectrum.peek
      ~PHACountsSpectrum.plot
      ~PHACountsSpectrum.plot_hist
      ~PHACountsSpectrum.read
      ~PHACountsSpectrum.rebin
      ~PHACountsSpectrum.reset_thresholds
      ~PHACountsSpectrum.to_hdulist
      ~PHACountsSpectrum.to_sherpa
      ~PHACountsSpectrum.to_table
      ~PHACountsSpectrum.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: arffile
   .. autoattribute:: bins_in_safe_range
   .. autoattribute:: bkgfile
   .. autoattribute:: counts_in_safe_range
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: energy
   .. autoattribute:: hi_threshold
   .. autoattribute:: livetime
   .. autoattribute:: lo_threshold
   .. autoattribute:: obs_id
   .. autoattribute:: offset
   .. autoattribute:: phafile
   .. autoattribute:: rmffile
   .. autoattribute:: total_counts

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: fill
   .. automethod:: from_hdulist
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_hist
   .. automethod:: read
   .. automethod:: rebin
   .. automethod:: reset_thresholds
   .. automethod:: to_hdulist
   .. automethod:: to_sherpa
   .. automethod:: to_table
   .. automethod:: write
